# stonefish_bluerov2

./: CMakeLists.txt  package.xml  patch_bluerov2_ros2_tank.sh  patch_bluerov2_ros2_tank_1.sh  patch_bluerov2_ros2_tank_2.sh
data/tank/: floor_10x10.obj.bak  floor_10x10.obj.bak_ds  wall_10x4.obj.bak_ds  wall_10x4.obj.bak_overlap
launch/: bluerov2_ros2_tank.launch.py
patchs/: patch_bluerov2_ros2_tank_3.sh  patch_bluerov2_ros2_tank_4.sh  patch_bluerov2_ros2_tank_5.sh  patch_tank_double_sided.sh  patch_tank_geometry.sh  patch_tank_overlap.sh  patch_tank_single_shell.sh
scenarios/: bluerov2_ros2.scn  bluerov2_ros2.scn.bak  bluerov2_tank_10x10.scn  bluerov2_tank_10x10.scn.bak_shell
scripts/: cmd_vel_to_thrusters.py
